--- a/mobile/sim.html
+++ b/mobile/sim.html
@@ -21,7 +21,7 @@
             </div> <!--Τέλος Επικεφαλίδας-->
     
         <div class="Text"> <!--ΑΡΧΗ Text-->
-            <a href="./"><img src="https://grcodeclub.github.io/file/logo_and_graphic/back.png" class="logo_back"></a>
+            <a href="https://grcodeclub.github.io/more/"><img src="https://grcodeclub.github.io/file/logo_and_graphic/back.png" class="logo_back"></a>
             <div class="Text_bg">
                 <h1 class="title">
                     SIM (Subscriber Identity Module) 
