--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="refresh" content="0;url=https://grcodeclub.gr/more/#post">
-    <script src="https://grcodeclub.github.io/js/head.js"></script>
-</head>
- <body class="basic"> </body>
-</html>
 
+<html>
+    <head>
+        <meta property="og:image" content="https://grcodeclub.gr/file/background/3.png"/>
+        <meta property="og:title" content="GrCode Club | Γλώσσα προγραμματισμού C">
+        <script src="https://grcodeclub.gr/js/jquery.js"></script>
+        <script src="https://grcodeclub.gr/programming/js/menu.js"></script>
+        <script src="https://grcodeclub.github.io/js/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/prism.js"></script>
+    </head>
+
+    <body class="basic">
+        <div class="container">
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/js/headder_and_menu.js"></script>
+            <div class="Text"> <!--Αρχή Κειμένου-->
+                <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
+                    <h1 class="title">Δημοσιεύσεις<br>
+                    <div  class="search"><input type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
+
+                    <table id="table" class="style2" style="max-width: 60%;">  <thead><tr><th>Τίτλος</th><th>Ημερομηνία </th></tr></thead>
+                        <tbody>  </tbody> </table>
+                    <script src="./add_grcdeclub.js"></script>
+                     <script src="https://grcodeclub.gr/javascript/tables/sort._2_columnsjs"></script>
+                    <script src="https://grcodeclub.gr/javascript/search/search_table_row_cells_0.js"></script>
+                </div><!-- Τέλος Background Κειμένου-->
+            </div> <!--Τέλος Κειμένου-->
+
+        </div> <!--Τέλος container-->
+        
+        <!-- Footer -->
+        <footer>
+            <table class="add_footer"></table>
+            <script src="https://grcodeclub.gr/js/footer.js"></script>       
+        </footer>
+    </body>
+</html>
