--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <table id="table" class="style2" style="max-width: 60%;">  <thead><tr><th>Τίτλος</th><th>Ημερομηνία </th></tr></thead>
                         <tbody>  </tbody> </table>
-                    <script src="./js/add_grcdeclub.js"></script>
+                    <script src="./js/add_grcodeclub.js"></script>
                      <script src="https://grcodeclub.gr/javascript/tables/sort._2_columnsjs"></script>
                     <script src="https://grcodeclub.gr/javascript/search/search_table_row_cells_0.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
