--- a/create/programming/index.html
+++ b/create/programming/index.html
@@ -16,7 +16,7 @@
                 <a href="https://grcodeclub.gr/post/create/"><img src="https://grcodeclub.gr/files-page/graphics/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->                    
                     <h1 class="title">Δημιουργία Post</h1>
-                    <a id="downloadButton" href="#" download="preview.html">Κατέβασμα HTML</a>
+                    <a class="open_link" id="downloadButton" href="#" download="preview.html">Κατέβασμα HTML</a>
                     <div id="container">
                         <div id="input">
                             <h2>Εισαγωγή HTML</h2>
