--- a/create/index.html
+++ b/create/index.html
@@ -15,6 +15,7 @@
                 <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/js/headder_and_menu.js"></script>
             
             <div class="Text"> <!--Αρχή Κειμένου-->
+                <a href="https://grcodeclub.gr/post/"><img src="https://grcodeclub.gr/files-page/graphics/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημιουργία Σελίδας</h1>
                      <br>
