--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/js/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
+                <a href="https://grcodeclub.gr/more/"><img src="https://grcodeclub.gr/files-page/graphics/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημοσιεύσεις<br>
                     <div  class="search"><input type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
