--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body class="basic">
         <div class="container-notmenu">
-            <div id="add_headder_and_menu"></div><script src="./header.js"></script>                
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/headder.js"></script>                
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput'/>
