--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-
 <html>
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/1.jpg"/>
         <meta property="og:title" content="Λεξικό Όρων Πληροφορικής">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.github.io/javascript/add-elements/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
 
 
     <body class="basic">
         <div class="container-notmenu">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/headder.js"></script>                
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput'/>
@@ -31,9 +30,6 @@
         </div> <!--Τέλος container-->
         
         <!-- Footer -->
-        <footer>
-            <table class="add_footer"></table>
-            <script src="https://grcodeclub.gr/js/footer.js"></script>       
-        </footer>
+        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
     </body>
 </html>
