--- a/office-suite/index.html
+++ b/office-suite/index.html
@@ -1,16 +1,14 @@
-
 <html>
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Office Suite">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.gr/more/menu.js"></script>
-        <script src="https://grcodeclub.github.io/javascript/add-elements/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
-
     <body class="basic">
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/javascript/add-elements/headder_and_menu.js"></script>                
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Office Suite<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
@@ -41,9 +39,7 @@
                      <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
-                <!-- Footer -->
-        <footer id="add_footer"></footer><script src="https://grcodeclub.github.io/javascript/add-elements/footer.js"></script>
+        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
     </body>
 </html>
