--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -4,12 +4,12 @@
         <meta property="og:title" content="Microsoft Office | Excel">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.gr/more/menu.js"></script>
-        <script src="https://grcodeclub.github.io/javascript/add-elements/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
 
     <body class="basic">
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/javascript/add-elements/headder_and_menu.js"></script>                
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Excel<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
@@ -69,9 +69,8 @@
                      <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
                 <!-- Footer -->
-        <footer id="add_footer"></footer><script src="https://grcodeclub.github.io/javascript/add-elements/footer.js"></script>
+        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
     </body>
 </html>
