--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -3,7 +3,7 @@
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Microsoft Office | Excel">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/more/menu.js"></script>
+        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
 
