--- a/tools/index.html
+++ b/tools/index.html
@@ -1,57 +1,17 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
-        <meta property="og:image" content="https://grcodeclub.gr/file/background/windows.png"/>
-        <meta property="og:title" content="Microsoft Windows | Language ID">
-        <script src="https://grcodeclub.gr/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/js/menu.js"></script>
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/header_and_footer.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/main.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/text.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/table.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/layout.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/list.css">
-        <link rel="stylesheet" href="https://grcodeclub.gr/css/body.css">
-        <link rel='icon' type='image/png' href='https://grcodeclub.gr/file/logo/black_logo.png'>
+        <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
+        <meta property="og:title" content="Υπηρεσίες της Google">
+        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
+        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
         <title> GrCode Club</title>
     </head>
 
     <body class="basic">
     <div class="container">
-        <section class="show_desktop"> <!--ΑΡΧΗ show_desktop-->
-            <div class="Header"> <!--ΑΡΧΗ Header show_desktop-->
-                <div class="layout">
-                    <div><img src="https://grcodeclub.gr/file/logo_and_graphic/logo.png" class="logo"/></div>
-                    <div><h1 class="header_text"><a href="https://grcodeclub.gr/"><span class="header_text">GrCode Club</span></a></h1></div>
-                </div> 
-            </div> <!--ΤΕΛΟΣ Header show_desktop-->        
-            <div class="Menu"> <!--ΑΡΧΗ Menu show_desktop-->
-                <div id="sidebarMenu" style="  overflow: auto;">
-                    <ul class="sidebarMenuInner">
-                    </ul>
-                  </div><!--Menu end-->         
-            </div><!--ΤΕΛΟΣ Menu show_desktop-->
-        </section> <!--ΤΕΛΟΣ show_desktop-->
-
-        <section class="show_mobile">  <!--ΑΡΧΗ show_mobile-->
-            <div class="Header"> <!--ΑΡΧΗ Header show_mobile-->
-                <div class="layout">
-                    <div><img src="https://grcodeclub.gr/file/logo_and_graphic/logo.png" class="logo"/></div>
-                    <div><h1 class="header_text"><a href="https://grcodeclub.gr/"><span class="header_text">GrCode Club</span></a></h1></div>
-                </div> 
-            </div> <!--ΤΕΛΟΣ Header show_mobile-->
-            <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
-            <label for="openSidebarMenu" class="sidebarIconToggle">
-                <div class="spinner diagonal part-1"></div>
-                <div class="spinner horizontal"></div>
-                <div class="spinner diagonal part-2"></div>
-            </label>
-            <div id="sidebarMenu">
-                <ul class="sidebarMenuInner"></ul>
-            </div>
-        </section> <!--ΤΕΛΟΣ show_mobile-->
-
-
+        <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
         <div class="Text"> <!--ΑΡΧΗ Text-->
             <div class="text_bg">
                 <h1 class="title">Εργαλεία 
@@ -80,9 +40,6 @@
     </div> <!--ΤΕΛΟΣ container-->
         
         <!-- Footer -->
-        <footer>
-            <table class="add_footer"></table>
-            <script src="https://grcodeclub.gr/js/footer.js"></script>       
-        </footer>
+        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
     </body>
 </html>
