--- a/tools/index.html
+++ b/tools/index.html
@@ -30,7 +30,7 @@
         </ul>
     </ul>
     <ul class="list">
-        <li><a href="https://grcodeclub.gr/tools/convert/tool.html" class="link_open" target="_blank">Μετατροπέας Hex, Binary, Decimal, Base64</a></li>
+        <li><a href="https://grcodeclub.gr/tools/convert" class="link_open" target="_blank">Μετατροπέας Hex, Binary, Decimal, Base64</a></li>
     </ul>                    
             <script src="https://grcodeclub.gr/javascript/search/search_list.js"></script>
         </div>
