--- a/tools/index.html
+++ b/tools/index.html
@@ -19,7 +19,7 @@
             </h1>
             <ul class="list">
                 <li><a href="https://regex101.com/" class="link_open" target="_blank">Regular expression</a></li>
-                <li><a href="https://grcodeclub.gr/tools/markdown.html" class="link_open" target="_blank">Markdown Preview</a></li>
+                <li><a href="https://grcodeclub.gr/more/tools/markdown.html" class="link_open" target="_blank">Markdown Preview</a></li>
             </ul>
             <ul class="list">
                 <li><a href="https://jodies.de/" class="link_open" target="_blank">IP Calculator / IP Subnetting</a></li>
@@ -30,7 +30,7 @@
         </ul>
     </ul>
     <ul class="list">
-        <li><a href="https://grcodeclub.gr/tools/convert" class="link_open" target="_blank">Μετατροπέας Hex, Binary, Decimal, Base64</a></li>
+        <li><a href="https://grcodeclub.gr/more/tools/convert" class="link_open" target="_blank">Μετατροπέας Hex, Binary, Decimal, Base64</a></li>
     </ul>                    
             <script src="https://grcodeclub.gr/javascript/search/search_list.js"></script>
         </div>
