--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
-        <meta property="og:title" content="Microsoft Office | Excel">
+        <meta property="og:title" content="Office Suite | Excel">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
@@ -11,6 +11,7 @@
         <div class="container">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
+                <a href="https://grcodeclub.gr/office-suite"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Excel<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
                     <table id="table" class="style2">
