--- a/post.html
+++ b/post.html
@@ -17,9 +17,9 @@
                         <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInputCategory'/></div></h1>
                         <table id="table" class="style2">
                         <tr id="title-table"><td>Τίτλος</td> <td>Κατηγορία</td> <td>Συγγραφέας</td> <td>Σύντομη Περιγραφή</td></tr>
-                        <tr><td>Build</td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
-                        <tr><td>NFC</td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
-                        <tr><td>SIM</td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
+                        <tr><td><a href="./hardware/build">Build</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
+                        <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
+                        <tr><td>><a href="./mobile/sim">SIM</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
                     </table>
                     <div class="pagination" id="pagination"></div>
                      <script src="./js/search-tables-pages.js"></script>
