--- a/hardware/build.html
+++ b/hardware/build.html
@@ -3,7 +3,6 @@
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="GRCODE CLUB | PC build">
         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
-        <link rel="stylesheet" href="./styles.css">
         <style>
             .arrow {
     display: inline-block;
@@ -85,7 +84,7 @@
                     <ol><li>Οθόνη</li><li>Πληκτρολόγιο</li><li>Ποντίκι</li><li>Ηχεία</li><li>UPS</li></ol>
                 </div></div>
 
-           
+           <script src="https://grcodeclub.github.io/js/action/dropdown-cards.js"></script>
                 
             </div> <!--ΤΕΛΟΣ Text-->
             </div>
