--- a/post.html
+++ b/post.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/1.jpg"/>
-        <meta property="og:title" content="Λεξικό Όρων Πληροφορικής">
+        <meta property="og:title" content="GrCode Club | Δημοσιεύσεις">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
