--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
-                <a href="https://grcodeclub.gr/office-suite"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
+                <a href="https://grcodeclub.gr/more/office-suite"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Excel<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
                     <table id="table" class="style2">
