--- a/office-suite/index.html
+++ b/office-suite/index.html
@@ -12,7 +12,7 @@
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Office Suite<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
                     <p style="text-align: center;">Το Office Suite είναι ένα σύνολο λογισμικών εφαρμογών που σχεδιάστηκαν για να διευκολύνουν τις εργασίες γραφείου. Το πιο γνωστό παράδειγμα είναι το Microsoft Office, αλλά υπάρχουν και άλλες εναλλακτικές, όπως της Google , το LibreOffice.</p> 
-                    <table id="table" class="style2">
+                   <table id="search_table_page">
                          <tr id="title-table"><td>Εφαρμογή</td><td>Περιγραφή</td></tr>
                          <tr><td>Σημειώσεις (Google)</td><td>Εφαρμογή για τη δημιουργία και αποθήκευση σημειώσεων, λιστών και υπενθυμίσεων.</td></tr>
                          <tr><td>Google Meet (Google)</td><td>Εφαρμογή για διαδικτυακές συναντήσεις και βιντεοκλήσεις με υποστήριξη για συνεργασία και κοινή χρήση οθόνης.</td></tr>
@@ -35,7 +35,6 @@
                          <tr><td>Stream (Microsoft Office)</td><td>Υπηρεσία ροής βίντεο για την εσωτερική επικοινωνία και την εκπαίδευση σε οργανισμούς.</td></tr>                         
                        </table>    
                      <div class="pagination" id="pagination"></div>
-                     <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
         </div> <!--Τέλος container-->
