--- a/create/index.html
+++ b/create/index.html
@@ -2,11 +2,9 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Create GrCode Club">
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script> 
-        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
-
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
     </head>
-    <body class="website">
+    <body>
         <div class="container">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
             <div class="Text"> <!--Αρχή Κειμένου-->
