--- a/create/index.html
+++ b/create/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Create</h1>
@@ -14,8 +14,6 @@
                         Σκοπός του Create είναι να κατανοήσει ο χρηστής όλες τις λειτουργίες που έχουμε εισάγει στην ιστοσελίδα. 
                         Επιπλέον θέλουμε να παρουσιάσουμε πληροφορίες για τον πως ενσωματώσαμε τις λειτουργίες στην ιστοσελίδα μας.
                       </h2>
-                 
-
                       <div  style="display: none;" class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
                       <table id="table" class="style2">
                           <tr id="title-table"><td>Αρχείο / Λειτουργία </td> <td>Περιγραφή</td></tr>
@@ -29,10 +27,7 @@
                        <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
-        
-        <!-- Footer -->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+               <footer id="addFooter"></footer> <!-- Footer -->
     </body>
 </html>
