--- a/create/google.html
+++ b/create/google.html
@@ -2,14 +2,11 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Build GrCode Club | Google Tools ">
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script> 
-        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
-        <link rel="stylesheet" href="https://grcodeclub.gr/web/css/grcodeclub/manual.css">
-
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
     </head>
-    <body class="website">
+    <body>
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Google Tools</h1>
@@ -61,10 +58,7 @@
                             <div style="padding-bottom: 100px;"></div>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
-        
-        <!-- Footer -->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+                <footer id="addFooter"></footer> <!-- Footer -->
     </body>
 </html>
