--- a/create/github.html
+++ b/create/github.html
@@ -2,13 +2,12 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Build GrCode Club | GitHub Page ">
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script> 
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
         <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
-        <link rel="stylesheet" href="https://grcodeclub.gr/web/css/grcodeclub/manual.css">
     </head>
-    <body class="website">
+    <body>
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Build GitHub Page</h1>
@@ -35,10 +34,7 @@
                     <img src="./files-page/github-page/image5.png">
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
-
         </div> <!--Τέλος container-->
-        
-        <!-- Footer -->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+       <footer id="addFooter"></footer> <!-- Footer -->
     </body>
 </html>
