--- a/create/google.html
+++ b/create/google.html
@@ -2,7 +2,9 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Build GrCode Club | Google Tools ">
-        <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
+                <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
+
     </head>
     <body>
         <div class="container">
