--- a/create/index.html
+++ b/create/index.html
@@ -2,7 +2,8 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Create GrCode Club">
-        <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
+        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
     </head>
     <body>
         <div class="container">
