--- a/create/index.html
+++ b/create/index.html
@@ -16,7 +16,7 @@
                         Επιπλέον θέλουμε να παρουσιάσουμε πληροφορίες για τον πως ενσωματώσαμε τις λειτουργίες στην ιστοσελίδα μας.
                       </h2>
                       <div  style="display: none;" class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
-                      <table id="table" class="style2">
+                      <table id="search_table_page">
                           <tr id="title-table"><td>Αρχείο / Λειτουργία </td> <td>Περιγραφή</td></tr>
                           <tr><td>Cookies</td><td>Δημιουργήσαμε Cookies που ενεργοποιώντας ΑΝ το αποδεχτούμε.</td></tr>
                           <tr><td>menu.js</td><td>Προσθέτουμε τα στοιχεία λίστας  που αφορά το Menu. </td></tr>
