--- a/create/google.html
+++ b/create/google.html
@@ -31,7 +31,7 @@
                         μπορεί να περιλαμβάνουν κώδικα για αναλυτικά δεδομένα, διαφημίσεις, pixel παρακολούθησης, και άλλα εργαλεία 
                         μάρκετινγκ ή παρακολούθησης.</p>
                     <div style="display: none;" class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
-                    <table id="table" class="style2">
+                    <table id="search_table_page">
                         <tr id="title-table"><td>Ετικέτα</td><td>Τύπος ετικέτας</td><td>Κανόνας Ενεργοποίησης</td></tr>
                         <tr><td>C</td><td>Google Analytics: Συμβάν GA4</td><td><b>Τύπος κανόνα ετικέτας: </b>Προβολή σελίδας <br><b>Κανόνας Ενεργοποίησης:</b> Page URL αρχίζει με https://grcodeclub.gr/c/</td></tr>
                         <tr><td>CPP</td><td>Google Analytics: Συμβάν GA4</td><td><b>Τύπος κανόνα ετικέτας: </b>Προβολή σελίδας <br><b>Κανόνας Ενεργοποίησης:</b> Page URL αρχίζει με https://grcodeclub.gr/cpp/</td></tr>
