--- a/create/index.html
+++ b/create/index.html
@@ -3,7 +3,7 @@
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Create GrCode Club">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
-        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
+        <script src="https://grcodeclub.github.io/more/create/js/menu.js"></script>
     </head>
     <body>
         <div class="container">
@@ -15,8 +15,7 @@
                         Σκοπός του Create είναι να κατανοήσει ο χρηστής όλες τις λειτουργίες που έχουμε εισάγει στην ιστοσελίδα. 
                         Επιπλέον θέλουμε να παρουσιάσουμε πληροφορίες για τον πως ενσωματώσαμε τις λειτουργίες στην ιστοσελίδα μας.
                       </h2>
-                      <div  style="display: none;" class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
-                      <table id="search_table_page">
+                      <table id="table_page">
                           <tr id="title-table"><td>Αρχείο / Λειτουργία </td> <td>Περιγραφή</td></tr>
                           <tr><td>Cookies</td><td>Δημιουργήσαμε Cookies που ενεργοποιώντας ΑΝ το αποδεχτούμε.</td></tr>
                           <tr><td>menu.js</td><td>Προσθέτουμε τα στοιχεία λίστας  που αφορά το Menu. </td></tr>
