--- a/create/google.html
+++ b/create/google.html
@@ -3,7 +3,7 @@
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Build GrCode Club | Google Tools ">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
-        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
+        <script src="https://grcodeclub.github.io/more/create/js/menu.js"></script>
     </head>
     <body>
         <div class="container">
@@ -30,8 +30,7 @@
                         έναν ιστότοπο ή μια εφαρμογή χωρίς να χρειάζεται να τροποποιούν απευθείας τον κώδικα του ιστότοπου. Οι ετικέτες 
                         μπορεί να περιλαμβάνουν κώδικα για αναλυτικά δεδομένα, διαφημίσεις, pixel παρακολούθησης, και άλλα εργαλεία 
                         μάρκετινγκ ή παρακολούθησης.</p>
-                    <div style="display: none;" class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
-                    <table id="search_table_page">
+                    <table id="table_page">
                         <tr id="title-table"><td>Ετικέτα</td><td>Τύπος ετικέτας</td><td>Κανόνας Ενεργοποίησης</td></tr>
                         <tr><td>C</td><td>Google Analytics: Συμβάν GA4</td><td><b>Τύπος κανόνα ετικέτας: </b>Προβολή σελίδας <br><b>Κανόνας Ενεργοποίησης:</b> Page URL αρχίζει με https://grcodeclub.gr/c/</td></tr>
                         <tr><td>CPP</td><td>Google Analytics: Συμβάν GA4</td><td><b>Τύπος κανόνα ετικέτας: </b>Προβολή σελίδας <br><b>Κανόνας Ενεργοποίησης:</b> Page URL αρχίζει με https://grcodeclub.gr/cpp/</td></tr>
