--- a/post.html
+++ b/post.html
@@ -2,20 +2,19 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/file/background/1.jpg"/>
         <meta property="og:title" content="GrCode Club | Δημοσιεύσεις">
-        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
 
 
-    <body class="basic">
+    <body id="basic">
         <div class="container-notmenu">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
-                    <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput'/>
-                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInputAuthor'/></div>
+                    <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput1'/>
+                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInput2'/></div>
                         <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInputCategory'/></div></h1>
-                        <table id="table" class="style2">
+                        <table id="search_table_page_3_input" class="style2">
                         <tr id="title-table"><td>Τίτλος</td> <td>Κατηγορία</td> <td>Συγγραφέας</td> <td>Σύντομη Περιγραφή</td></tr>
                         <tr><td><a href="./hardware/build">Build</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
                         <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
