--- a/post.html
+++ b/post.html
@@ -27,6 +27,6 @@
         </div> <!--Τέλος container-->
         
         <!-- Footer -->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+        <footer id="addFooter"></footer>
     </body>
 </html>
