--- a/post.html
+++ b/post.html
@@ -13,8 +13,8 @@
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput1'/>
                         <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInput2'/></div>
-                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInput3/></div></h1>
-                        <table id="search_table_page_3_input" class="style2">
+                        <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Κατηγορία" id='searchInput3'/></div></h1>
+                        <table id="search_table_page_3_input">
                         <tr id="title-table"><td>Τίτλος</td> <td>Κατηγορία</td> <td>Συγγραφέας</td> <td>Σύντομη Περιγραφή</td></tr>
                         <tr><td><a href="./hardware/build">Build</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
                         <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
