--- a/post.html
+++ b/post.html
@@ -7,9 +7,9 @@
 
 
     <body id="basic">
-        <div class="container-notmenu">
+        <div class="container">
             <div id="add_headder_and_menu"></div>
-            <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
+            <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg" > <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Δημοσιεύσεις<br><div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Τίτλου" id='searchInput1'/>
                         <div><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση Συγγραφέα" id='searchInput2'/></div>
