--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -2,18 +2,17 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Office Suite | Excel">
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
-        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
 
-    <body class="basic">
+    <body id="basic">
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
-                <a href="https://grcodeclub.gr/more/office-suite"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
+                <a href="https://grcodeclub.gr/more/office-suite"><h1 id="back_page"></h1></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Excel<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
-                    <table id="table" class="style2">
+                    <table id="search_table_page">
                          <tr id="title-table"><td>Συνάρτηση</td><td>Περιγραφή</td><td>Παράδειγμα</td></tr>
                          <tr><td>=NOW()</td><td>Η συνάρτηση NOW επιστρέφει την τρέχουσα ημερομηνία και ώρα στο σύστημα.</td><td> =NOW() <br>Επιστρέφει π.χ. "19/08/2024 10:30".</td></tr>
                          <tr><td>=TODAY()</td><td>Η συνάρτηση TODAY επιστρέφει την τρέχουσα ημερομηνία χωρίς την ώρα.</td><td> =TODAY() <br>Επιστρέφει π.χ. "19/08/2024".</td></tr>
@@ -66,11 +65,10 @@
 
                         </table>    
                      <div class="pagination" id="pagination"></div>
-                     <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
         </div> <!--Τέλος container-->
                 <!-- Footer -->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+        <footer id="addFooter"></footer>
     </body>
 </html>
