--- a/office-suite/index.html
+++ b/office-suite/index.html
@@ -2,12 +2,11 @@
     <head>
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Office Suite">
-         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
-        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
+         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
-    <body class="basic">
+    <body id="basic">
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+            <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Office Suite<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
@@ -38,6 +37,6 @@
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
         </div> <!--Τέλος container-->
-        <footer id="add-social"></footer><script src="https://grcodeclub.github.io/js/add/social.js"></script>
+        <footer id="addFooter"></footer>
     </body>
 </html>
