--- a/hardware/build.html
+++ b/hardware/build.html
@@ -14,6 +14,7 @@
                 <div class="text_bg" >
                     <h1 class="title">PC build</h1>
                 <h2 style="text-align: center;">Τι θα χρειαστείς για το νέο σου PC build</h2>
+                <div id="dropcard">
                 <div class="dropcard"> <button class="showCardButton"><span class="arrow">&#9654;</span> Επεξεργαστή (CPU)</button>
                 <div class="card-content">
                     <p>Όσο πιο μεγάλος ο αριθμός, τόσο πιο γρήγορος και με περισσότερους πυρήνες έρχεται ο επεξεργαστής.</p>
@@ -66,9 +67,7 @@
                 <div class="card-content">
                     <ol><li>Οθόνη</li><li>Πληκτρολόγιο</li><li>Ποντίκι</li><li>Ηχεία</li><li>UPS</li></ol>
                 </div></div>
-
-           <script src="https://grcodeclub.github.io/js/action/dropdown-cards.js"></script>
-                
+                </div>                
             </div> <!--ΤΕΛΟΣ Text-->
             </div>
     </div> <!--ΤΕΛΟΣ container-->
