--- a/hardware/build.html
+++ b/hardware/build.html
@@ -7,7 +7,7 @@
     <body> 
     
         <div class="container-notmenu">
-            <div id="add_headder_and_menu"></div>
+            <div id="add_headder"></div>
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
                 <a href="../"><h1 id="back_page"></h1></a>
 
