--- a/create/github.html
+++ b/create/github.html
@@ -3,7 +3,7 @@
         <meta property="og:image" content="https://grcodeclub.gr/files-page/preview/programming.png"/>
         <meta property="og:title" content="Build GrCode Club | GitHub Page ">
         <script src="https://grcodeclub.github.io/js/add/data.js"></script> 
-        <script src="https://grcodeclub.github.io/create/js/menu.js"></script>
+        <script src="https://grcodeclub.github.io/more/create/js/menu.js"></script>
     </head>
     <body>
         <div class="container">
