--- a/create/google.html
+++ b/create/google.html
@@ -48,7 +48,7 @@
                     <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script><br><br>
 
                     <div style="display: none;" class="search" id="search1"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput1'/></div></h1>
-                        <table  id="tabl1e"  class="style2">
+                        <table  class="mytable">
                             <tr id="title-table1"><td>Τύπος</td><td>Kατηγόρια</td><td>Περιγραφή</td></tr>
                             <tr><td>Συμβάν GA4</td><td>Τύπος ετικέτας</td><td>Χρησιμοποιείται για την αποστολή δεδομένων συμβάντων στο Google Analytics 4 (GA4)</td></tr>
                             <tr><td>Κλικ - Μόνο σύνδεσμοι</td><td>Τύπος κανόνα ετικέτας</td><td>είναι ένας τύπος trigger στο Google Tag Manager (GTM). Αυτό το trigger ενεργοποιεί μια ετικέτα όταν ένας χρήστης κάνει κλικ σε έναν σύνδεσμο σε έναν ιστότοπο. Χρησιμοποιείται συχνά για την παρακολούθηση συγκεκριμένων κλικ σε υπερσυνδέσμους, όπως εξωτερικούς συνδέσμους, κουμπιά που οδηγούν σε διαφορετικές σελίδες ή ενέργειες όπως "κατεβάστε ένα αρχείο".</td></tr>
