--- a/create/index.html
+++ b/create/index.html
@@ -24,12 +24,18 @@
                           <tr><td>συντόμευση</td><td>Έχουμε μπλοκάρει την συγκεκριμένη συντόμευση από το πληκτρολόγιο<br>CTR+U<br>CTR+P<br>CTR+S</td></tr>
                       </table>
                       <div class="pagination" id="pagination"></div>
-
+                      <h2 class="highlight_black">Βασικά αρχεία</h2>
                       <label style="margin-left: 10px;">Διάλεξε αρχείο</label>
                       <select id="code" name="code" style="color: white; border-radius: 10px; background-color: rgba(0, 0, 0, 0.795); border: none; font-size: 18px; outline: none; cursor: pointer;">
                           <option value="-">Επιλέξτε</option>
                           <option value="https://raw.githubusercontent.com/grcodeclub/more/main/create/basic.html">Η δομή της HTML</option>
-                      </select><br>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/menu/basic.js">Εισαγωγή menu</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/tables/pages.js">Σελιδοποίηση Πίνακα με Δυναμικό Χρωματισμό Γραμμών</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/add/data.js">Δυναμική Φόρτωση Πόρων και Ενεργοποίηση Λειτουργιών σε HTML Σελίδες</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/cookies.js">Cookies</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/action/dropdown-cards.js">Dropdown cards</option>
+                          <option value="https://raw.githubusercontent.com/grcodeclub/grcodeclub.github.io/main/js/action/show_code.js">Δυναμική Φόρτωση και Επισήμανση Κώδικα σε HTML</option>
+                        </select><br><br>
                       <div class="bg_preview">
                           <div class="appearance">
                               <div class="space">
