--- a/post.html
+++ b/post.html
@@ -18,7 +18,8 @@
                      <table id="search_table_page_3">
                         <tr id="title-table"><td>Τίτλος</td> <td>Κατηγορία</td> <td>Συγγραφέας</td> <td>Σύντομη Περιγραφή</td></tr>
                         <tr><td><a href="./hardware/build">Build</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
-                        <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
+                        <tr><td><a href="./hardware/electronics">Ηλεκτρονική</a></td> <td>Hardware</td> <td>GrCode Club</td> <td>-</td></tr>
+                         <tr><td><a href="./mobile/nfc">NFC</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr>
                         <tr><td><a href="./mobile/sim">SIM</a></td> <td>Mobile</td> <td>GrCode Club</td> <td>-</td></tr></table>
                      <div class="pagination" id="pagination"></div>
                 </div><!-- Τέλος Background Κειμένου-->
