--- a/tools/convert/index.html
+++ b/tools/convert/index.html
@@ -3,9 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Υπηρεσίες της Google">
-        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
-        <script src="https://grcodeclub.github.io/js/add/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
         <title> GrCode Club</title>
 
         <style>
@@ -26,7 +24,7 @@
     <body class="basic"> 
 
 <div class="container">
-                   <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder_and_menu.js"></script>
+                   <div id="add_headder_and_menu"></div>
 
 
         <div class="Text"> <!--ΑΡΧΗ Text-->
