--- a/google.html
+++ b/google.html
@@ -3,7 +3,7 @@
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="Υπηρεσίες της Google">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
+        <script src="https://grcodeclub.github.io/js/menu/basic.js"></script>
         <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     </head>
 
@@ -40,7 +40,7 @@
                          <tr><td><a href="https://jamboard.google.com/" >Jamboard</a></td><td>Διαδρασκός πίνακας για συνεργασία σε πραγματικό χρόνο με σχεδιαστικά εργαλεία και ενσωμάτωμένη υποστήριξη για έγγραφα Google.</td></tr>
                         </table>    
                      <div class="pagination" id="pagination"></div>
-                     <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
+                     <script src="https://grcodeclub.github.io/javascript/search/search-tables-pages.js"></script>
                 </div><!-- Τέλος Background Κειμένου-->
             </div> <!--Τέλος Κειμένου-->
 
