--- a/image/color-rgb.html
+++ b/image/color-rgb.html
@@ -24,10 +24,10 @@
     <body> 
     
 <div class="container">
-        <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/js/headder_and_menu.js"></script>      
+        <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/headder_and_menu.js"></script>      
     
         <div class="Text"> <!--ΑΡΧΗ Text-->
-           <a href="https://grcodeclub.gr/image"><img src="https://grcodeclub.github.io//files-page/graphics/back.png" class="logo_back"></a>
+           <a href="https://grcodeclub.github.io/image"><img src="https://grcodeclub.github.io//files-page/graphics/back.png" class="logo_back"></a>
             <div class="Text_bg">
                 <h1 style="font-size: 50px; color: white; text-align:center;  background-color: rgba(12, 81, 228, 0.494);
                 border-top-left-radius: 10px; border-top-right-radius: 10px">Το χρωματικό Μοντέλο RGB </h1>
