--- a/tools/cookies/index.html
+++ b/tools/cookies/index.html
@@ -7,7 +7,7 @@
 
    <body class="basic">
         <div class="container-notmenu">
-            <div id="add_headder"></div><script src="https://grcodeclub.gr/js/add/headder.js"></script>
+            <div id="add_headder"></div><script src="https://grcodeclub.github.io/js/add/headder.js"></script>
 
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
@@ -19,7 +19,7 @@
                         <tr  id="title-table"><td>Name</td> <td>Υπηρεσία</td><td>Τιμη</td><td>Περιγραφή</td></tr>
                     </table>
                     <div class="pagination" id="pagination"></div>
-                    <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
+                    <script src="https://grcodeclub.github.io/javascript/search/search-tables-pages.js"></script>
                    
                   <p>
                     Expires : Το Expires είναι ένα attribute που μπορεί να χρησιμοποιηθεί σε ένα cookie για να ορίσει την ημερομηνία και την ώρα λήξης του. Όταν ένα cookie έχει ορισμένο το Expires attribute, θα παραμείνει αποθηκευμένο στον υπολογιστή του χρήστη μέχρι την καθορισμένη ημερομηνία και ώρα, ανεξάρτητα από το αν ο browser είναι ανοιχτός ή κλειστός.
