--- a/tools/index.html
+++ b/tools/index.html
@@ -15,13 +15,13 @@
                 <h1 class="title">Εργαλεία<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>
                 <table id="search_table_page">
                    <tr id="title-table"><td>Εργαλείο</td><td>Δημιουργός</td><td>Περιγραφή</td></tr>
-                   <tr><td><a href="https://grcodeclub.gr/more/tools/convert" target="_blank">Convert</a></td><td>GrCode Club</td><td>Μετατροπέας Hex, Binary, Decimal, Base64</td></tr>
-                   <tr><td><a href="https://grcodeclub.gr/more/tools/markdown" target="_blank">Markdown</a></td><td>GrCode Club</td><td>Markdown Preview</td></tr>
-                   <tr><td><a href="https://grcodeclub.gr/more/tools/cookies" target="_blank">MyCookies</a></td><td>GrCode Club</td><td>-</td></tr>
+                   <tr><td><a href="https://grcodeclub.github.io/more/tools/convert" target="_blank">Convert</a></td><td>GrCode Club</td><td>Μετατροπέας Hex, Binary, Decimal, Base64</td></tr>
+                   <tr><td><a href="https://grcodeclub.github.io/more/tools/markdown" target="_blank">Markdown</a></td><td>GrCode Club</td><td>Markdown Preview</td></tr>
+                   <tr><td><a href="https://grcodeclub.github.io/more/tools/cookies" target="_blank">MyCookies</a></td><td>GrCode Club</td><td>-</td></tr>
 
                 </table>
                 <div class="pagination" id="pagination"></div>
-                     <script src="https://grcodeclub.gr/javascript/search/search-tables-pages.js"></script>
+                     <script src="https://grcodeclub.github.io/javascript/search/search-tables-pages.js"></script>
         </div> <!--ΤΕΛΟΣ Text-->
 
     </div> <!--ΤΕΛΟΣ container-->
