--- a/tools/markdown.html
+++ b/tools/markdown.html
@@ -5,7 +5,7 @@
     <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
     <meta property="og:title" content="Υπηρεσίες της Google">
     <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-    <script src="https://grcodeclub.gr/js/menu/basic.js"></script>
+    <script src="https://grcodeclub.github.io/js/menu/basic.js"></script>
     <script src="https://grcodeclub.github.io/js/add/head.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/markdown-it/dist/markdown-it.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs/prism.js"></script>
