--- a/image/index.html
+++ b/image/index.html
@@ -4,17 +4,17 @@
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="GrCode Club | Edit">
         <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.gr/more/menu.js"></script>
+        <script src="https://grcodeclub.github.io/more/menu.js"></script>
         <script src="https://grcodeclub.github.io/js/head.js"></script>
     </head>
 
     
     <body class="edit">
         <div class="container">
-            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.gr/js/headder_and_menu.js"></script>      
+            <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/headder_and_menu.js"></script>      
                            
             <div class="Text"> <!--Αρχή Κειμένου-->
-                <a href="https://grcodeclub.gr/more"><img src="https://grcodeclub.github.io//files-page/graphics/back.png" class="logo_back"></a>
+                <a href="https://grcodeclub.github.io/more"><img src="https://grcodeclub.github.io//files-page/graphics/back.png" class="logo_back"></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                    <h1 class="title">Image<br>
                   <input type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/> </h1>
