--- a/mobile/nfc.html
+++ b/mobile/nfc.html
@@ -11,7 +11,7 @@
         <div class="container-notmenu">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/add/headder.js"></script>
             <div class="Text-notmenu"> <!--Αρχή Κειμένου-->
-                <a href="https://grcodeclub.gr/more/post"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
+                <a href="https://grcodeclub.github.io/more/post"><h1 id="back_page"></h1></a> <script src="https://grcodeclub.github.io/js/add/back_page.js"></script>
 
                 <div class="text_bg" >
                 <h1 class="title">Near Field Communication (NFC)</h1>
