--- a/office-suite/excel.html
+++ b/office-suite/excel.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
-                <a href="https://grcodeclub.gr/more/office-suite"><h1 id="back_page"></h1></a>
+                <a href="https://grcodeclub.github.io/more/office-suite"><h1 id="back_page"></h1></a>
                 <div class="text_bg"> <!-- Αρχή Background Κειμένου-->
                     <h1 class="title">Excel<br><div class="search" id="search"><input style="width: 100%;" type="input" class="form__field" placeholder="Αναζήτηση" id='searchInput'/></div></h1>                    
                     <table id="search_table_page">
