--- a/tools/cookies/index.html
+++ b/tools/cookies/index.html
@@ -5,7 +5,7 @@
         <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
 
-   <body class="basic">
+    <body>
         <div class="container-notmenu">
             <div id="add_headder"></div><script src="https://grcodeclub.github.io/js/add/headder.js"></script>
 
