--- a/image/color-rgb.html
+++ b/image/color-rgb.html
@@ -3,9 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.5">
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="GrCode Club | Το χρωματικό Μοντέλο RGB">
-        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.github.io/more/menu.js"></script>
-        <script src="https://grcodeclub.github.io/js/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
         <style>
 
             body{
