--- a/image/index.html
+++ b/image/index.html
@@ -3,13 +3,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=0.8">
         <meta property="og:image" content="https://grcodeclub.github.io/files-page/preview/basic.png"/>
         <meta property="og:title" content="GrCode Club | Edit">
-        <script src="https://grcodeclub.github.io/js/jquery.js"></script>
-        <script src="https://grcodeclub.github.io/more/menu.js"></script>
-        <script src="https://grcodeclub.github.io/js/head.js"></script>
+        <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
 
     
-    <body class="edit">
+    <body>
         <div class="container">
             <div id="add_headder_and_menu"></div><script src="https://grcodeclub.github.io/js/headder_and_menu.js"></script>      
                            
