--- a/office-suite/index.html
+++ b/office-suite/index.html
@@ -4,7 +4,7 @@
         <meta property="og:title" content="Office Suite">
          <script src="https://grcodeclub.github.io/js/add/data.js"></script>
     </head>
-    <body id="basic">
+    <body>
         <div class="container">
             <div id="add_headder_and_menu"></div>
             <div class="Text"> <!--Αρχή Κειμένου-->
