--- a/tools/convert/index.html
+++ b/tools/convert/index.html
@@ -21,7 +21,7 @@
             }
         </style>
     </head>
-    <body class="basic"> 
+    <body>
 
 <div class="container">
                    <div id="add_headder_and_menu"></div>
