--- a/tools/markdown.html
+++ b/tools/markdown.html
@@ -17,7 +17,7 @@
             <br><br><br>
             <div class="text_bg">
                 <h1 class="title" style="border: none;">Markdown Preview</h1>
-                <p><a class="link" href="https://grcodeclub.github.io/programming/markdown.html">Markdown εντολές</a> </p>
+                <p><a class="link" href="https://grcodeclub.github.io/programming/languages/markdown">Markdown εντολές</a> </p>
                 <div class="markdown-container">
                     <!-- Εδώ θα προβληθεί το Markdown -->
                 </div>
